--- a/templates/applicationtest/home.html
+++ b/templates/applicationtest/home.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <h1>This is your home page!</h1>
+<button href="{% url 'login'%}">Login</button>
+<button onclick="location.href='http://127.0.0.1:8000/applicationtest/login'">Login</button>
 </body>
 </html>
